resources/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: sans-serif;
  text-align: center;
}

html, body {
  height: 100%;
  width: 100%;
}

body {
  display: grid;
  grid-template: max-content repeat(4, 1fr) max-content / repeat(4, 1fr);
}

/* Header and Nav Bar */

header {
  padding: 20px;
  background-color: black;
  grid-area: 1 / 1 / 1 / 5;
  align-self: start;
}

nav {
  display: flex;
  grid-area: 3 / 3;
}

ul{
  border-left: 5px solid;
  list-style-type: none;
  padding-left: 10px;
}

li {
  padding: 10px;
  transition: transform 0.2s;
}

li:hover {
  color: white;
  background-color: black;
  border-color: black;
  transform: scale(1.2);
}

a {
  color: black;
  text-decoration: none;
}

/* Main Content */

main {
  grid-area: 4 / 2 / 4 / 4;
  margin: 10px 0 0;
  width: 100%;
  border: 5px solid;
  border-radius: 3px;
  padding: 20px;
}

hr {
  background-color: black;
  border: 1px solid;
  margin: 10px auto 20px;
  width: 60%;
}

footer {
  grid-area: 6 / 1 / 6 / 5;
  padding: 20px;
  background-color: black;
}

h1 {
  color: #C4C4C4
}

.github {
  color: red;
  border-style: solid;
  border-radius: 10px;
  padding: 10px;
  text-decoration: none;
}

.github:visited {
  color: red;
}

.github:hover {
  background-color: red;
  border-color: red;
  color: white;
}

.title {
  color: #C4C4C4;
}

/* Corner frame */

.top-right {
  grid-area: 2 / 4;
  justify-self: end;
  margin: 0;
  width: 100px;
  height: 100px;
  border-style: solid solid none none;
  border-width: thick;
  margin: 10px;
}

.top-left {
  grid-area: 2 / 1;
  margin: 0;
  width: 100px;
  height: 100px;
  border-style: solid none none solid;
  border-width: thick;
  margin: 10px;
}

.bottom-right {
  grid-area: 5 / 4;
  align-self: end;
  justify-self: end;
  width: 100px;
  height: 100px;
  border-style: none solid solid none;
  border-width: thick;
  margin: 10px;
}

.bottom-left {
  grid-area: 5 / 1;
  align-self: end;
  width: 100px;
  height: 100px;
  border-style: none none solid solid;
  border-width: thick;
  margin: 10px;
}

/* Logo */

.logo {
  justify-self: end;
  align-self: center;
  grid-area: 3 / 2;
  margin-right: 10px;
  display: flex;
}

.e {
  height: 90px;
  color: white;
  background-color: black;
  font-size: 5em;
  clip-path: polygon(0 10%, 0 90%, 80% 90%, 60% 10%);
  position: relative;
  left: 35px;
  transition: transform 0.2s;
  transform: translateZ(0);
}

.b {
  height: 90px;
  color: white;
  background-color: red;
  font-size: 5em;
  clip-path: polygon(30% 10%, 50% 90%, 100% 90%, 100% 10%);
  position: relative;
  transition: transform 0.2s;
}

.e:hover {
  transform: scale(1.2);
}

.e:hover + .b {
  transform: scale(1.1);
}

.b:hover {
  transform: scale(1.2);
}

p {
  color: #C4C4C4;
  position: relative;
  top: 33px;
}

